# oss_weekly_reporter

./: .env.template  .gitignore  README.md  config.yaml  config.yaml.template  fix_markdown.py  github_issue_report.py  github_issue_report_markdown.py  pyproject.toml  run.sh
.github/workflows/: extract-logs.yml  weekly-report.yml
data/2025-03-04_to_2025-04-03/: 0412_1day_hackathon.json  0_はじめに読んでね.json  0_全体お知らせ.json  1_freetalk-in-english.json  1_自己紹介.json  1_雑談.json  2_新しいプロジェクトの種.json  2_開発_いどばた.json  2_開発_いどばた_github.json  2_開発_デジ民ウェブサイト.json  2_開発_広聴ai.json  2_開発_広聴ai_github.json  2_開発_政治資金透明化ツール.json  3_事例紹介_全体.json  all_summary.md  botテスト環境_jun.json  summary.json  test.json  weekly_summary.md
data/2025-03-05_to_2025-04-04/: github_report-idobata-all.md  github_report-idobata-analyst.md  github_report-idobata-discourse-agent.md  github_report-idobata-infra.md  github_report-idobata-sns-agent.md  github_report-kouchou-ai.md  github_report-website.md  github_summary_idobata-analyst.json  github_summary_idobata-discourse-agent.json  github_summary_idobata-infra.json  github_summary_idobata-sns-agent.json  github_summary_kouchou-ai.json  github_summary_website.json  idobata-analyst.json  idobata-discourse-agent.json  idobata-infra.json  idobata-sns-agent.json  kouchou-ai.json  website.json
data/2025-03-26_to_2025-04-02/: 0412_1day_hackathon.json  0_全体お知らせ.json  (+12 more)
docs/: ai_documentation.md
prompts/: idobata_prompt.txt  kouchou_prompt.txt  polimoney_prompt.txt  website_prompt.txt
src/: __init__.py  call_openai_api.py  config.py
tests/: test_call_openai_api.py
(+490 files in other folders)
